# C_Vulkan_Engine

./: .gitignore  CMakeLists.txt  Makefile  build-all-win64.bat  init_linux.sh
engine/: build-lib-win64.bat  platform.c
engine/src/: CMakeLists.txt  defines.h  entry.h  game_types.h  platform.h  test.c  test.h
engine/src/core/: application.c  application.h  asserts.h  logger.c  logger.h  vkcmemory.h  vkmemory.c
engine/src/platform/: platform.h  platform_linux.c  platform_win64.c
scripts/: init_linux.sh  make.bat
test/: build-exec-win64.bat
test/src/: CMakeLists.txt  entry.c  game.c  game.h  main.c
